<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmployeeActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/employeeView"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="TODO"/>
    <TextView
            android:text="@string/fullname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/nameTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/employeeView"/>
    <TextView
            android:text="@string/title_text"
            android:layout_width="30dp"
            android:layout_height="22dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailTextView" app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/phoneTextView" app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/department_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/departmentTextView" app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/infoTextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/departmentTextView" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>